# ffmpeg-01

./: README.md
app/: build.gradle
app/src/androidTest/java/com/tianzhuan/wangyiplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/include/libavfilter/: avfilter.h  version.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/java/com/tianzhuan/wangyiplayer/: MainActivity.java  WangyiPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tianzhuan/wangyiplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
